# win32_cmake

./: CMakeLists.txt  README.md  main.c
cmake/: win32_resource.cmake
include/: resource.h
resources/: win.exe.manifest
